fixing navbar on mobile

--- a/public/puckiq/css/bulma.scss
+++ b/public/puckiq/css/bulma.scss
@@ -29,4 +29,30 @@ $content-heading-color: $puckiq-color;
 @import "../../../node_modules/bulma/sass/layout/section.sass";
 */
 
+/* https://github.com/jgthms/bulma/issues/1381 */
+.navbar-item {
+
+  &.has-dropdown {
+    .navbar-dropdown {
+      display: none;
+    }
+
+    &.is-active {
+      .navbar-dropdown {
+        display: block;
+        background-color: white;
+        border-bottom-left-radius: 6px;
+        border-bottom-right-radius: 6px;
+        border-top: 2px solid #dbdbdb;
+        box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
+        font-size: 0.875rem;
+        left: 0;
+        min-width: 100%;
+        position: absolute;
+        top: 100%;
+        z-index: 20;
+      }
+    }
+  }
+}
 
